Deletion of prior sample index.

--- a/Hannah.html
+++ b/Hannah.html
@@ -5,24 +5,36 @@
     <title>Onyx</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="main.css" rel="stylesheet" type="text/css" media="screen,projection" >
 </head>
 <body>
 
     <h1>Hannah Widger</h1>
 
-    <img class="myimage" src="IMG_0365.JPG"/>
-    <p>
-        Hello my name is Hannah! I am a senior in Management
-        Information Systems at the University of Nebraska at Omaha.
-        I worked as a Software Engineer Intern at Northrop Grumman
-        over the summer in Los Angeles. Someday I hope to develop
-        my own video game that is centered around strong female
-        characters. I wnat to empower more women to pursue their
-        passions and to get involved in video games.
-    </p>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <img src="IMG_0365.JPG" class="img-fluid" alt="Hannah Widger"/>
+                </div>
+                <div class="col-sm">
+                    <p>
+                        Hello my name is Hannah! I am a senior in Management
+                        Information Systems at the University of Nebraska at Omaha.
+                        I worked as a Software Engineer Intern at Northrop Grumman
+                        over the summer in Los Angeles. Someday I hope to develop
+                        my own video game that is centered around strong female
+                        characters. I wnat to empower more women to pursue their
+                        passions and to get involved in video games.
+                    </p>
+                </div>
+                <div class="col-sm">
+                    <a href="Onyx.html">Onyx's Page</a>
+                </div>
+            </div>
+        </div>
 
-    <a href="Onyx.html">Onyx's Page</a>
+
 
 </body>
 </html>
