--- a/Onyx.html
+++ b/Onyx.html
@@ -5,20 +5,30 @@
     <title>Onyx</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="main.css" rel="stylesheet" type="text/css" media="screen,projection" >
 </head>
 <body>
 
     <h1>Onyx Widger</h1>
 
-    <img class="myimage" src="IMG_1016.jpg"/>
-    <p>Hello my name is Onyx, taken after the white and black stone.
-        I was born in Los Angeles, California in a bush. Hannah found me
-        and my 3 other siblings in not very good condition. Now I am doing much better
-        and am a happy and healthy kitten!
-    </p>
-
-    <a href="Hannah.html">Hannah's Page</a>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <img src="IMG_1016.jpg" class="img-fluid" alt="Onyx Widger"/>
+            </div>
+            <div class="col-sm">
+                <p>Hello my name is Onyx, taken after the white and black stone.
+                    I was born in Los Angeles, California in a bush. Hannah found me
+                    and my 3 other siblings in not very good condition. Now I am doing much better
+                    and am a happy and healthy kitten!
+                </p>
+            </div>
+            <div class="col-sm">
+                <a href="Hannah.html">Hannah's Page</a>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
