Changed layout to card format.

--- a/Hannah.html
+++ b/Hannah.html
@@ -10,30 +10,26 @@
 </head>
 <body>
 
-    <h1>Hannah Widger</h1>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-sm">
-                    <img src="IMG_0365.JPG" class="img-fluid" alt="Hannah Widger"/>
-                </div>
-                <div class="col-sm">
-                    <p>
-                        Hello my name is Hannah! I am a senior in Management
-                        Information Systems at the University of Nebraska at Omaha.
-                        I worked as a Software Engineer Intern at Northrop Grumman
-                        over the summer in Los Angeles. Someday I hope to develop
-                        my own video game that is centered around strong female
-                        characters. I wnat to empower more women to pursue their
-                        passions and to get involved in video games.
-                    </p>
-                </div>
-                <div class="col-sm">
-                    <a href="Onyx.html">Onyx's Page</a>
-                </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card" style="width: 35rem;">
+            <img src="IMG_0365.JPG" class="card-img-top" alt="Hannah Widger">
+            <div class="card-body">
+                <h5 class="card-title">Hannah Widger</h5>
+                <p class="card-text">
+                    Hello my name is Hannah! I am a senior in Management
+                    Information Systems at the University of Nebraska at Omaha.
+                    I worked as a Software Engineer Intern at Northrop Grumman
+                    over the summer in Los Angeles. Someday I hope to develop
+                    my own video game that is centered around strong female
+                    characters. I wnat to empower more women to pursue their
+                    passions and to get involved in video games.
+                </p>
+                <a href="Onyx.html" class="btn btn-primary">Go to Onyx's page</a>
+            </div>
             </div>
         </div>
-
+    </div>
 
 
 </body>
