--- a/Onyx.html
+++ b/Onyx.html
@@ -10,22 +10,20 @@
 </head>
 <body>
 
-    <h1>Onyx Widger</h1>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-sm">
-                <img src="IMG_1016.jpg" class="img-fluid" alt="Onyx Widger"/>
-            </div>
-            <div class="col-sm">
-                <p>Hello my name is Onyx, taken after the white and black stone.
-                    I was born in Los Angeles, California in a bush. Hannah found me
-                    and my 3 other siblings in not very good condition. Now I am doing much better
-                    and am a happy and healthy kitten!
-                </p>
-            </div>
-            <div class="col-sm">
-                <a href="Hannah.html">Hannah's Page</a>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card" style="width: 35rem;">
+                <img src="IMG_1016.jpg" class="card-img-top" alt="Onyx Widger">
+                <div class="card-body">
+                    <h5 class="card-title">Onyx Widger</h5>
+                    <p class="card-text">
+                        Hello my name is Onyx, taken after the white and black stone.
+                        I was born in Los Angeles, California in a bush. Hannah found me
+                        and my 3 other siblings in not very good condition. Now I am doing much better
+                        and am a happy and healthy kitten!
+                    </p>
+                    <a href="Hannah.html" class="btn btn-primary">Go to Hannah's page</a>
+                </div>
             </div>
         </div>
     </div>
